@@ -27,88 +27,104 @@
  */
 package org.hisp.dhis.analytics.event.data;
 
-import static org.hisp.dhis.analytics.event.data.DimensionsServiceCommon.OperationType.AGGREGATE;
-import static org.hisp.dhis.analytics.event.data.DimensionsServiceCommon.OperationType.QUERY;
+import static org.hisp.dhis.analytics.common.DimensionsServiceCommon.OperationType.AGGREGATE;
+import static org.hisp.dhis.analytics.common.DimensionsServiceCommon.OperationType.QUERY;
+import static org.hisp.dhis.analytics.common.DimensionsServiceCommon.collectDimensions;
+import static org.hisp.dhis.analytics.common.DimensionsServiceCommon.filterByValueType;
+import static org.hisp.dhis.common.PrefixedDimensions.ofItemsWithProgram;
+import static org.hisp.dhis.common.PrefixedDimensions.ofProgramStageDataElements;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-
 import lombok.RequiredArgsConstructor;
-
+import org.hisp.dhis.analytics.common.DimensionsServiceCommon;
 import org.hisp.dhis.analytics.event.EnrollmentAnalyticsDimensionsService;
-import org.hisp.dhis.common.BaseIdentifiableObject;
+import org.hisp.dhis.common.PrefixedDimension;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.program.ProgramService;
 import org.hisp.dhis.program.ProgramStage;
-import org.hisp.dhis.program.ProgramStageDataElement;
+import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
+import org.hisp.dhis.user.CurrentUserService;
+import org.hisp.dhis.user.User;
 import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
-class DefaultEnrollmentAnalyticsDimensionsService implements EnrollmentAnalyticsDimensionsService
-{
-    private final ProgramService programService;
+public class DefaultEnrollmentAnalyticsDimensionsService
+    implements EnrollmentAnalyticsDimensionsService {
+  private final ProgramService programService;
 
-    @Override
-    public List<BaseIdentifiableObject> getQueryDimensionsByProgramStageId( String programId )
-    {
-        return Optional.of( programId )
-            .map( programService::getProgram )
-            .filter( Program::isRegistration )
-            .map( program -> collectDimensions(
-                List.of(
-                    program.getProgramIndicators(),
-                    getProgramStageDataElements( QUERY, program ),
-                    filterByValueType( QUERY, getTeasIfRegistrationAndNotConfidential( program ),
-                        TrackedEntityAttribute::getValueType ) ) ) )
-            .orElse( Collections.emptyList() );
-    }
+  private final AclService aclService;
 
-    private Collection<ProgramStageDataElement> getProgramStageDataElements(
-        DimensionsServiceCommon.OperationType operationType, Program program )
-    {
-        return program.getProgramStages().stream()
-            .map( ProgramStage::getProgramStageDataElements )
-            .map( programStageDataElements -> filterByValueType(
-                operationType,
-                programStageDataElements,
-                a -> a.getDataElement().getValueType() ) )
-            .flatMap( Collection::stream )
-            .collect( Collectors.toList() );
-    }
+  private final CurrentUserService currentUserService;
 
-    @Override
-    public List<BaseIdentifiableObject> getAggregateDimensionsByProgramStageId( String programId )
-    {
-        return Optional.of( programId )
-            .map( programService::getProgram )
-            .map( program -> collectDimensions(
-                List.of(
-                    getProgramStageDataElements( AGGREGATE, program ),
-                    filterByValueType( AGGREGATE,
-                        program.getTrackedEntityAttributes(),
-                        TrackedEntityAttribute::getValueType ) ) ) )
-            .orElse( Collections.emptyList() );
-    }
+  @Override
+  public List<PrefixedDimension> getQueryDimensionsByProgramId(String programId) {
+    User user = currentUserService.getCurrentUser();
 
-    private Collection<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential( Program program )
-    {
-        return Optional.of( program )
-            .filter( Program::isRegistration )
-            .map( Program::getTrackedEntityAttributes )
-            .orElse( Collections.emptyList() )
-            .stream()
-            .filter( this::isNotConfidential )
-            .collect( Collectors.toList() );
-    }
+    return Optional.of(programId)
+        .map(programService::getProgram)
+        .filter(Program::isRegistration)
+        .map(
+            program ->
+                collectDimensions(
+                    List.of(
+                        ofItemsWithProgram(
+                            program,
+                            program.getProgramIndicators().stream()
+                                .filter(pi -> aclService.canRead(user, pi))
+                                .collect(Collectors.toSet())),
+                        getProgramStageDataElements(QUERY, program),
+                        filterByValueType(
+                            QUERY,
+                            ofItemsWithProgram(
+                                program, getTeasIfRegistrationAndNotConfidential(program))))))
+        .orElse(Collections.emptyList());
+  }
 
-    private boolean isNotConfidential( TrackedEntityAttribute trackedEntityAttribute )
-    {
-        return !trackedEntityAttribute.isConfidentialBool();
-    }
+  private Collection<PrefixedDimension> getProgramStageDataElements(
+      DimensionsServiceCommon.OperationType operationType, Program program) {
+    return program.getProgramStages().stream()
+        .map(ProgramStage::getProgramStageDataElements)
+        .map(
+            programStageDataElements ->
+                filterByValueType(
+                    operationType, ofProgramStageDataElements(programStageDataElements)))
+        .flatMap(Collection::stream)
+        .collect(Collectors.toList());
+  }
 
+  @Override
+  public List<PrefixedDimension> getAggregateDimensionsByProgramStageId(String programId) {
+    return Optional.of(programId)
+        .map(programService::getProgram)
+        .map(
+            program ->
+                collectDimensions(
+                    List.of(
+                        getProgramStageDataElements(AGGREGATE, program),
+                        filterByValueType(
+                            AGGREGATE,
+                            ofItemsWithProgram(program, program.getTrackedEntityAttributes())))))
+        .orElse(Collections.emptyList());
+  }
+
+  private Collection<TrackedEntityAttribute> getTeasIfRegistrationAndNotConfidential(
+      Program program) {
+    return Optional.of(program)
+        .filter(Program::isRegistration)
+        .map(Program::getTrackedEntityAttributes)
+        .orElse(Collections.emptyList())
+        .stream()
+        .filter(this::isNotConfidential)
+        .collect(Collectors.toList());
+  }
+
+  private boolean isNotConfidential(TrackedEntityAttribute trackedEntityAttribute) {
+    return !trackedEntityAttribute.isConfidentialBool();
+  }
 }
